--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "docker": "scripts/docker.sh",
     "train": "node -r ts-node/register src/chitchat.ts",
     "download": "scripts/download.sh",
-    "test": "echo test"
+    "test:unit": "blue-tape -r ts-node/register \"src/**/*.spec.ts\" \"src/*.spec.ts\" \"tests/*.spec.ts\" \"tests/**/*.spec.ts\"",
+    "test": "npm run test:unit"
   },
   "repository": {
     "type": "git",
@@ -26,8 +27,8 @@
   "homepage": "https://github.com/huan/javascript-concist-chit-chat#readme",
   "devDependencies": {
     "@types/argparse": "^1.0.36",
-    "argparse": "^1.0.10",
-    "readline": "^1.3.0",
+    "@types/blue-tape": "^0.1.32",
+    "blue-tape": "^1.0.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
@@ -35,9 +36,6 @@
   "dependencies": {
     "@tensorflow/tfjs": "^0.15.3",
     "@tensorflow/tfjs-node": "^0.3.1",
-    "@tensorflow/tfjs-node-gpu": "^0.3.1",
-    "@types/mkdirp": "^0.5.2",
-    "invert-kv": "^2.0.0",
-    "zip-array": "^1.0.1"
+    "argparse": "^1.0.10"
   }
 }
