--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Concist Chit Chat in JavaScript/TypeScript",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "docker": "scripts/docker.sh",
-    "train": "node -r ts-node/register src/chitchat.ts",
+    "train": "node -r ts-node/register bin/train.ts",
     "download": "scripts/download.sh",
     "test:unit": "blue-tape -r ts-node/register \"src/**/*.spec.ts\" \"src/*.spec.ts\" \"tests/*.spec.ts\" \"tests/**/*.spec.ts\"",
     "test": "npm run test:unit"
