--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "devDependencies": {
     "@types/argparse": "^1.0.36",
     "@types/blue-tape": "^0.1.32",
+    "@tensorflow/tfjs-node": "^0.3.1",
+    "argparse": "^1.0.10",
     "blue-tape": "^1.0.0",
     "shx": "^0.3.2",
     "ts-node": "^8.0.2",
@@ -37,8 +39,6 @@
     "typescript": "^3.3.3333"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^0.15.3",
-    "@tensorflow/tfjs-node": "^0.3.1",
-    "argparse": "^1.0.10"
+    "@tensorflow/tfjs": "^0.15.3"
   }
 }
