--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   },
   "homepage": "https://github.com/huan/javascript-concist-chit-chat#readme",
   "devDependencies": {
+    "@tensorflow/tfjs-node": "^1.0.1",
+    "@tensorflow/tfjs-node-gpu": "^1.0.1",
     "@types/argparse": "^1.0.36",
     "@types/blue-tape": "^0.1.32",
-    "@tensorflow/tfjs-node": "^0.3.1",
     "argparse": "^1.0.10",
     "blue-tape": "^1.0.0",
     "shx": "^0.3.2",
@@ -39,6 +40,6 @@
     "typescript": "^3.3.3333"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^0.15.3"
+    "@tensorflow/tfjs": "^1.0.1"
   }
 }
